# Workprint

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  NOTICE  PROJECT_PLAN.md  README.md  RIGHTS.md  ROADMAP.md  WORKPRINT_CONTEXT.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  pyproject.toml  workprint-investigation.md
.claude/: launch.json
.claude/commands/: workprint.md
.claude/skills/workprint/: SKILL.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
Prototype/: README.md  app.js  index.html  styles.css
app/: globals.css  layout.tsx  page.tsx
app/api/claude-local-summary/: route.ts
app/api/git-summary/: route.ts
app/api/investigate/: route.ts
app/api/provider-reasoning/: route.ts
components/: claude-session-evidence.tsx  confidence-indicator.tsx  evidence-drawer.tsx  git-timeline.tsx  project-file-evidence.tsx  source-status-list.tsx  workprint-app.tsx
docs/: DOGFOOD.md  ai-reasoning-providers.md  architecture.md  chat-summary-evidence.md  chatgpt-adapter.md  chatgpt-import.md  claude-adapter.md  claude-code-adapter.md  claude-cowork-adapter.md  claude-desktop-chat-adapter.md  claude-import.md  copy-quality-audit.md  desktop-app.md  evidence-collection-guide.md  executive-report-design.md  executive-report.md  figma-import.md  git-adapter.md  google-docs-import.md  guided-investigation.md  investigation-engine.md  mcp-server.md  multi-source-investigations.md  observation-model.md  project-discovery.md  project-notes-import.md  quick-start.md  visual-direction-v0.md  web-experience-v0.md  web-wireframes-v0.md
docs/foundation/: 00-START-HERE.md  AGENT_WORKING_CONTEXT.md  AI_COLLABORATION.md  AI_REASONING_PRIVACY.md  ARCHITECTURE_OVERVIEW.md  AUTONOMOUS_EXECUTION_GUARDRAILS.md  CODEX_WORKING_CONTEXT.md  DECISION_LOG.md  ENGINEERING_PRINCIPLES.md  FOUNDATION_CHARTER.md  PRODUCT_PRINCIPLES.md  PROJECT_CONTEXT.md  WORKPRINT_GLOSSARY.md  WORKPRINT_VISION.md
docs/investigations/: INV-0001-workprint.md
electron/: icon.icns  main.js  preload.js
examples/: learning-design-project.md  software-project.md
fixtures/: workprint-dogfood.json
fixtures/chat-summary/: sample-summary.json  sample-summary.md
fixtures/chatgpt/: sample-conversations.json
fixtures/claude/: sample-conversations.json
fixtures/claude-desktop-chat/synthetic-keyval-store.indexeddb.leveldb/: 000008.ldb  LOG  LOG.old  MANIFEST-000001
fixtures/figma/: sample-file.json
fixtures/google-docs/: sample-document.json  sample-document.md  sample-document.txt
fixtures/project-notes/: project-brief.md  research-notes.txt
lib/: active-discovery.ts  claude-local-summary.ts  electron-bridge.ts  git-summary.ts  local-project-sources.ts  project-file-evidence.ts  provider-reasoning.ts  sample-data.ts  workprint-python-command.ts
schemas/: evidence.schema.json  finding.schema.json  investigation.schema.json  observation.schema.json  report.schema.json
scripts/: after-pack.js  build-backend.sh  copy-standalone-assets.js
spec/: 01-principles.md  02-domain-model.md  03-investigation-protocol.md  04-attribution-model.md  05-reporting-standard.md  activity-taxonomy.md  decision-model.md
src/workprint/: __init__.py  ai_fluency.py  bundled_cli.py  claude_local_summary.py  cli.py  copy_audit.py  discovery.py  engine.py  executive.py  executive_constants.py  extractor.py  git_summary.py  guided.py  mcp_server.py  multisource.py  render.py  timeline.py  web_investigate.py
src/workprint/adapters/: __init__.py  base.py  chat_summary.py  chatgpt.py  claude.py  claude_code.py  claude_cowork.py  claude_desktop_chat.py  extractor.py  figma.py  git.py  google_docs.py  project_notes.py  registry.py
templates/: detailed-report.md  executive-report.md  portfolio-report.md  validation-report.md
tests/: test_ai_fluency.py  test_bundled_cli.py  test_chat_summary_adapter.py  test_chatgpt_adapter.py  test_claude_adapter.py  test_claude_code_adapter.py  test_claude_cowork_adapter.py  test_claude_desktop_chat_adapter.py  test_claude_local_summary.py  test_cli.py  test_cli_ingest.py  test_discovery.py  test_engine.py  test_evidence_adapter.py  test_executive.py  test_extractor.py  test_figma_adapter.py  test_git_adapter.py  test_git_summary.py  test_google_docs_adapter.py  test_guided.py  test_mcp_server.py  test_models.py  test_multisource.py  test_observation.py  test_project_notes.py  test_provider_reasoning_web.py  test_reports.py  test_timeline.py  test_web_investigate.py  test_web_provider_needed_state.py
(+17 files in other folders)
