[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workprint"
version = "0.3.0"
description = "Evidence-based reconstruction of how work gets made."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Tony Kim"}]
license = {text = "All rights reserved"}
dependencies = []

[project.optional-dependencies]
# Opt-in extra for deep parsing of the Claude Desktop chat cache
# (an undocumented Chromium IndexedDB/LevelDB format). The base
# `workprint` package stays dependency-free; installing this extra is a
# deliberate choice, not a requirement for any other capability.
claude-desktop-chat = ["ccl_chromium_reader"]

[project.scripts]
workprint = "workprint.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
