[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "workprint"
version = "0.4.5"
description = "Evidence-based reconstruction of how work gets made."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Tony Kim"}]
license = {text = "Apache-2.0"}
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = []

[project.optional-dependencies]
# Opt-in extra for deep parsing of the Claude Desktop chat cache
# (an undocumented Chromium IndexedDB/LevelDB format). The base
# `workprint` package stays dependency-free; installing this extra is a
# deliberate choice, not a requirement for any other capability.
#
# Pinned to a specific commit rather than a PyPI release: this library is
# not published on PyPI under any name (a similarly named PyPI package,
# "chromium-reader", is an unrelated project with a confirmed bug — see
# docs/foundation/DECISION_LOG.md, "Claude Desktop Chat's Optional
# Dependency Is Pinned, Not Name-Matched"). Pinning also matches this
# project's existing precedent for vendored/pinned external code (see the
# unslop-text upstream integration).
claude-desktop-chat = [
    "ccl_chromium_reader @ git+https://github.com/cclgroupltd/ccl_chromium_reader.git@9639a318ce0f7b546e1d8d02d89423ab6b4ae202",
]

# Opt-in extra for running Workprint as a local MCP server, so it is
# callable from inside Claude Desktop or Claude Code rather than only the
# CLI or web app. `mcp` is the official Model Context Protocol Python SDK
# (modelcontextprotocol/python-sdk on PyPI as `mcp`), verified installed
# and imported successfully, and its own requires-python (>=3.10) matches
# this project's. Unlike claude-desktop-chat's dependency, it is a normal
# published, versioned PyPI release, not a git-pinned commit.
mcp = ["mcp[cli]>=1.0"]

[project.scripts]
workprint = "workprint.cli:main"
workprint-mcp = "workprint.mcp_server:main"
workprint-backend = "workprint.bundled_cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
